--- a/PowerFeed_V2.ioc
+++ b/PowerFeed_V2.ioc
@@ -10,7 +10,8 @@ Mcu.IP2=RCC
 Mcu.IP3=SYS
 Mcu.IP4=TIM1
 Mcu.IP5=TIM2
-Mcu.IPNb=6
+Mcu.IP6=TIM11
+Mcu.IPNb=7
 Mcu.Name=STM32F401C(B-C)Ux
 Mcu.Package=UFQFPN48
 Mcu.Pin0=PH0 - OSC_IN
@@ -23,6 +24,7 @@ Mcu.Pin14=PB6
 Mcu.Pin15=PB7
 Mcu.Pin16=VP_SYS_VS_Systick
 Mcu.Pin17=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin18=VP_TIM11_VS_ClockSourceINT
 Mcu.Pin2=PA0-WKUP
 Mcu.Pin3=PA1
 Mcu.Pin4=PA2
@@ -31,7 +33,7 @@ Mcu.Pin6=PB13
 Mcu.Pin7=PB15
 Mcu.Pin8=PA8
 Mcu.Pin9=PA9
-Mcu.PinsNb=18
+Mcu.PinsNb=19
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401CCUx
@@ -47,6 +49,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC.TIM1_TRG_COM_TIM11_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0-WKUP.GPIOParameters=GPIO_Speed,GPIO_Label
 PA0-WKUP.GPIO_Label=PULSE
@@ -159,12 +162,22 @@ SH.S_TIM1_CH2.0=TIM1_CH2,Encoder_Interface
 SH.S_TIM1_CH2.ConfNb=1
 SH.S_TIM2_CH1_ETR.0=TIM2_CH1,PWM Generation1 CH1
 SH.S_TIM2_CH1_ETR.ConfNb=1
+TIM1.IC1Filter=2
+TIM1.IC2Filter=2
+TIM1.IPParameters=IC1Filter,IC2Filter
+TIM11.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM11.IPParameters=Prescaler,AutoReloadPreload
+TIM11.Prescaler=642
 TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM2.IPParameters=Channel-PWM Generation1 CH1,AutoReloadPreload,OCFastMode_PWM-PWM Generation1 CH1
+TIM2.IPParameters=Channel-PWM Generation1 CH1,AutoReloadPreload,OCFastMode_PWM-PWM Generation1 CH1,Period,Pulse-PWM Generation1 CH1
 TIM2.OCFastMode_PWM-PWM\ Generation1\ CH1=TIM_OCFAST_ENABLE
+TIM2.Period=2
+TIM2.Pulse-PWM\ Generation1\ CH1=1
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM11_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM11_VS_ClockSourceINT.Signal=TIM11_VS_ClockSourceINT
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 board=custom
