--- a/PowerFeed_V2.ioc
+++ b/PowerFeed_V2.ioc
@@ -10,8 +10,9 @@ Mcu.IP2=RCC
 Mcu.IP3=SYS
 Mcu.IP4=TIM1
 Mcu.IP5=TIM2
-Mcu.IP6=TIM11
-Mcu.IPNb=7
+Mcu.IP6=TIM10
+Mcu.IP7=TIM11
+Mcu.IPNb=8
 Mcu.Name=STM32F401C(B-C)Ux
 Mcu.Package=UFQFPN48
 Mcu.Pin0=PH0 - OSC_IN
@@ -24,7 +25,8 @@ Mcu.Pin14=PB6
 Mcu.Pin15=PB7
 Mcu.Pin16=VP_SYS_VS_Systick
 Mcu.Pin17=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin18=VP_TIM11_VS_ClockSourceINT
+Mcu.Pin18=VP_TIM10_VS_ClockSourceINT
+Mcu.Pin19=VP_TIM11_VS_ClockSourceINT
 Mcu.Pin2=PA0-WKUP
 Mcu.Pin3=PA1
 Mcu.Pin4=PA2
@@ -33,7 +35,7 @@ Mcu.Pin6=PB13
 Mcu.Pin7=PB15
 Mcu.Pin8=PA8
 Mcu.Pin9=PA9
-Mcu.PinsNb=19
+Mcu.PinsNb=20
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401CCUx
@@ -50,6 +52,7 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.TIM1_TRG_COM_TIM11_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0-WKUP.GPIOParameters=GPIO_Speed,GPIO_Label
 PA0-WKUP.GPIO_Label=PULSE
@@ -126,7 +129,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_TIM11_Init-TIM11-false-HAL-true
 RCC.48MHZClocksFreq_Value=42000000
 RCC.AHBFreq_Value=42000000
 RCC.APB1Freq_Value=42000000
@@ -165,6 +168,9 @@ SH.S_TIM2_CH1_ETR.ConfNb=1
 TIM1.IC1Filter=2
 TIM1.IC2Filter=2
 TIM1.IPParameters=IC1Filter,IC2Filter
+TIM10.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM10.IPParameters=Prescaler,AutoReloadPreload
+TIM10.Prescaler=642
 TIM11.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM11.IPParameters=Prescaler,AutoReloadPreload
 TIM11.Prescaler=642
@@ -176,6 +182,8 @@ TIM2.Period=2
 TIM2.Pulse-PWM\ Generation1\ CH1=1
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM10_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM10_VS_ClockSourceINT.Signal=TIM10_VS_ClockSourceINT
 VP_TIM11_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM11_VS_ClockSourceINT.Signal=TIM11_VS_ClockSourceINT
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
