--- a/PowerFeed_V2.ioc
+++ b/PowerFeed_V2.ioc
@@ -17,25 +17,26 @@ Mcu.Name=STM32F401C(B-C)Ux
 Mcu.Package=UFQFPN48
 Mcu.Pin0=PH0 - OSC_IN
 Mcu.Pin1=PH1 - OSC_OUT
-Mcu.Pin10=PA13
-Mcu.Pin11=PA14
-Mcu.Pin12=PA15
-Mcu.Pin13=PB3
-Mcu.Pin14=PB6
-Mcu.Pin15=PB7
-Mcu.Pin16=VP_SYS_VS_Systick
-Mcu.Pin17=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin18=VP_TIM10_VS_ClockSourceINT
-Mcu.Pin19=VP_TIM11_VS_ClockSourceINT
+Mcu.Pin10=PA9
+Mcu.Pin11=PA13
+Mcu.Pin12=PA14
+Mcu.Pin13=PA15
+Mcu.Pin14=PB3
+Mcu.Pin15=PB6
+Mcu.Pin16=PB7
+Mcu.Pin17=VP_SYS_VS_Systick
+Mcu.Pin18=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin19=VP_TIM10_VS_ClockSourceINT
 Mcu.Pin2=PA0-WKUP
+Mcu.Pin20=VP_TIM11_VS_ClockSourceINT
 Mcu.Pin3=PA1
 Mcu.Pin4=PA2
 Mcu.Pin5=PB12
 Mcu.Pin6=PB13
-Mcu.Pin7=PB15
-Mcu.Pin8=PA8
-Mcu.Pin9=PA9
-Mcu.PinsNb=20
+Mcu.Pin7=PB14
+Mcu.Pin8=PB15
+Mcu.Pin9=PA8
+Mcu.PinsNb=21
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401CCUx
@@ -87,6 +88,10 @@ PB13.GPIOParameters=GPIO_Label
 PB13.GPIO_Label=SW_RIGHT
 PB13.Locked=true
 PB13.Signal=GPIO_Input
+PB14.GPIOParameters=GPIO_Label
+PB14.GPIO_Label=SEC_SW
+PB14.Locked=true
+PB14.Signal=GPIO_Input
 PB15.GPIOParameters=GPIO_Label
 PB15.GPIO_Label=EN_SW
 PB15.Locked=true
@@ -129,7 +134,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_TIM11_Init-TIM11-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_TIM11_Init-TIM11-false-HAL-true,7-MX_TIM10_Init-TIM10-false-HAL-true
 RCC.48MHZClocksFreq_Value=42000000
 RCC.AHBFreq_Value=42000000
 RCC.APB1Freq_Value=42000000
