--- a/PowerFeed_V2.ioc
+++ b/PowerFeed_V2.ioc
@@ -10,9 +10,10 @@ Mcu.IP2=RCC
 Mcu.IP3=SYS
 Mcu.IP4=TIM1
 Mcu.IP5=TIM2
-Mcu.IP6=TIM10
-Mcu.IP7=TIM11
-Mcu.IPNb=8
+Mcu.IP6=TIM9
+Mcu.IP7=TIM10
+Mcu.IP8=TIM11
+Mcu.IPNb=9
 Mcu.Name=STM32F401C(B-C)Ux
 Mcu.Package=UFQFPN48
 Mcu.Pin0=PH0 - OSC_IN
@@ -26,9 +27,10 @@ Mcu.Pin15=PB6
 Mcu.Pin16=PB7
 Mcu.Pin17=VP_SYS_VS_Systick
 Mcu.Pin18=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin19=VP_TIM10_VS_ClockSourceINT
+Mcu.Pin19=VP_TIM9_VS_ClockSourceINT
 Mcu.Pin2=PA0-WKUP
-Mcu.Pin20=VP_TIM11_VS_ClockSourceINT
+Mcu.Pin20=VP_TIM10_VS_ClockSourceINT
+Mcu.Pin21=VP_TIM11_VS_ClockSourceINT
 Mcu.Pin3=PA1
 Mcu.Pin4=PA2
 Mcu.Pin5=PB12
@@ -36,7 +38,7 @@ Mcu.Pin6=PB13
 Mcu.Pin7=PB14
 Mcu.Pin8=PB15
 Mcu.Pin9=PA8
-Mcu.PinsNb=21
+Mcu.PinsNb=22
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401CCUx
@@ -52,6 +54,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC.TIM1_BRK_TIM9_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM1_TRG_COM_TIM11_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -185,6 +188,9 @@ TIM2.IPParameters=Channel-PWM Generation1 CH1,AutoReloadPreload,OCFastMode_PWM-P
 TIM2.OCFastMode_PWM-PWM\ Generation1\ CH1=TIM_OCFAST_ENABLE
 TIM2.Period=2
 TIM2.Pulse-PWM\ Generation1\ CH1=1
+TIM9.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM9.IPParameters=AutoReloadPreload,Prescaler
+TIM9.Prescaler=642
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM10_VS_ClockSourceINT.Mode=Enable_Timer
@@ -193,5 +199,7 @@ VP_TIM11_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM11_VS_ClockSourceINT.Signal=TIM11_VS_ClockSourceINT
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+VP_TIM9_VS_ClockSourceINT.Mode=Internal
+VP_TIM9_VS_ClockSourceINT.Signal=TIM9_VS_ClockSourceINT
 board=custom
 isbadioc=false
