--- a/PowerFeed_V2.ioc
+++ b/PowerFeed_V2.ioc
@@ -182,7 +182,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_TIM11_Init-TIM11-false-HAL-true,7-MX_TIM10_Init-TIM10-false-HAL-true,8-MX_TIM9_Init-TIM9-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_TIM11_Init-TIM11-false-HAL-true,7-MX_TIM10_Init-TIM10-false-HAL-true,8-MX_TIM9_Init-TIM9-false-HAL-true,9-MX_ADC1_Init-ADC1-false-HAL-true,10-MX_TIM4_Init-TIM4-false-HAL-true,11-MX_TIM5_Init-TIM5-false-HAL-true
 RCC.48MHZClocksFreq_Value=42000000
 RCC.AHBFreq_Value=42000000
 RCC.APB1Freq_Value=42000000
@@ -239,8 +239,11 @@ TIM2.IPParameters=Channel-PWM Generation1 CH1,AutoReloadPreload,OCFastMode_PWM-P
 TIM2.OCFastMode_PWM-PWM\ Generation1\ CH1=TIM_OCFAST_ENABLE
 TIM2.Period=2
 TIM2.Pulse-PWM\ Generation1\ CH1=1
+TIM4.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM4.Channel-Input_Capture2_from_TI2=TIM_CHANNEL_2
-TIM4.IPParameters=Channel-Input_Capture2_from_TI2
+TIM4.IPParameters=Channel-Input_Capture2_from_TI2,AutoReloadPreload,Prescaler,Period
+TIM4.Period=0
+TIM4.Prescaler=4199
 TIM9.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM9.IPParameters=AutoReloadPreload,Prescaler
 TIM9.Prescaler=642
@@ -259,4 +262,4 @@ VP_TIM5_VS_ControllerModeClock.Signal=TIM5_VS_ControllerModeClock
 VP_TIM9_VS_ClockSourceINT.Mode=Internal
 VP_TIM9_VS_ClockSourceINT.Signal=TIM9_VS_ClockSourceINT
 board=custom
-isbadioc=false
+isbadioc=true
